objects/WGS_Renewal_QLIs__c.object
<CustomObject>
    <fields>
        <fullName>Com2_QLIID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Com2 QLIID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contract code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDCLegacyID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SFDCLegacyID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Status Message</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WGS_Group_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>WGS Group Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>WGS Renewal QLIs</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Com2_QLIID__c</columns>
        <columns>Contract_code__c</columns>
        <columns>SFDCLegacyID__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Message__c</columns>
        <columns>WGS_Group_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WGS-{0000000}</displayFormat>
        <label>WGS Renewal QLIs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WGS Renewal QLIs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>